demo-satellite-cloud-native/k8s/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: satellite-cloud-native
  labels:
    demo: satellite-cloud-native
