demo-satellite-cloud-native/k8s/base/idm-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: idm
  namespace: satellite-cloud-native
  labels:
    app: idm
    app.kubernetes.io/name: idm
    app.kubernetes.io/part-of: satellite-cloud-native
    app.kubernetes.io/component: identity
    demo: satellite-cloud-native
spec:
  selector:
    kubevirt.io/domain: idm
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
    - name: ldap
      port: 389
      targetPort: 389
      protocol: TCP
    - name: ldaps
      port: 636
      targetPort: 636
      protocol: TCP
    - name: kerberos-tcp
      port: 88
      targetPort: 88
      protocol: TCP
    - name: kerberos-udp
      port: 88
      targetPort: 88
      protocol: UDP
    - name: kpasswd-tcp
      port: 464
      targetPort: 464
      protocol: TCP
    - name: kpasswd-udp
      port: 464
      targetPort: 464
      protocol: UDP
