demo-satellite-cloud-native/k8s/base/satellite-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: satellite
  namespace: satellite-cloud-native
  labels:
    app: satellite
    app.kubernetes.io/name: satellite
    app.kubernetes.io/part-of: satellite-cloud-native
    app.kubernetes.io/component: content-management
    demo: satellite-cloud-native
spec:
  selector:
    kubevirt.io/domain: satellite
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
    - name: qdrouterd
      port: 5647
      targetPort: 5647
      protocol: TCP
    - name: mqtt
      port: 1883
      targetPort: 1883
      protocol: TCP
    - name: capsule
      port: 9090
      targetPort: 9090
      protocol: TCP
